// Copyright 2016-2023, Pulumi Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pulumirpc.testing;

option go_package = "github.com/pulumi/pulumi/sdk/v3/proto/go/testing";

// LanguageTest is the interface to the pulumi language test framework. This is _highly_ experimental and
// currently subject to breaking changes without warning.
service LanguageTest {
    // GetLanguageTests returns a list of all the language tests.
    rpc GetLanguageTests(GetLanguageTestsRequest) returns (GetLanguageTestsResponse) {}

    // PrepareLanguageTests prepares the engine to run language tests. It sets up a stable artifacts folder
    // (which should be .gitignore'd) and fills it with the core SDK artifact.
    rpc PrepareLanguageTests(PrepareLanguageTestsRequest) returns (PrepareLanguageTestsResponse) {}

    // RunLanguageTest runs a single test of the language plugin.
    rpc RunLanguageTest(RunLanguageTestRequest) returns (RunLanguageTestResponse) {}
}

message GetLanguageTestsRequest {

}

message GetLanguageTestsResponse {
    repeated string tests = 1;
}

message PrepareLanguageTestsRequest {
    string language_plugin_name = 1;
    string language_plugin_target = 2;
    string snapshot_directory = 3;
    string temporary_directory = 4;
    string core_sdk_directory = 5;
}

message PrepareLanguageTestsResponse {
    string token = 1;
}

message RunLanguageTestRequest {
    string token = 1;
    string test = 2;
}

message RunLanguageTestResponse {
    bool success = 1;
    repeated string messages = 2;
    string stdout = 3;
    string stderr = 4;
}